Minor Fix after Release
- Fixed Spelling Mistake
- Added first record
- Updated "About" Page

--- a/about.html
+++ b/about.html
@@ -38,7 +38,8 @@
                     <p>Hey! Welcome to the Main Level List 👋 <br>
                        Here are a few things I would like to say while you're here: <br>
                        I'm excited to share this project I've made during my free time. It's not an official creation of the Pointercrate Team, but rather a parody of the famous "Demonlist" I've made for the community. I've dedicated myself to keeping this site, and all submitted runs up-to-date, by updating this site every day or two. Should GD Update 2.2 ever be released, rest assured that I'll promptly add all the new levels here too. <br>
-                       While I must apologize for any minor bugs or lack of polish on the site, I only spent about a day or two on it. I genuinely hope you find enjoyment in exploring   it. Your feedback would mean the world to me. Thank you for taking the time to read this message, and I hope you have a wonderful time here! 🥰</p>
+                       While I must apologize for any minor bugs or lack of polish on the site, I only spent about a day or two on it. I genuinely hope you find enjoyment in exploring   it. Your feedback would mean the world to me. Thank you for taking the time to read this message, and I hope you have a wonderful time here! 🥰 <br><br>
+                       PS: All spinoff levels will be added soon!</p>
                 </div>
                 <div class="about-text">
                     <h3>Contributions</h3>
