--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 </a>
                 <a href="levels/theory-of-everything.html"class="card-content-link">
                     <div class="card-content">
-                        <h1 class="level-name">#9 – Theory Of Everyting</h1>
+                        <h1 class="level-name">#9 – Theory Of Everything</h1>
                         <h4 class="level-creator"><i>RobTop</i></h4>
                     </div>
                 </a>
