Changed Order + Record Placement #2
- Fixed minor stuff
- changed level order
- added ~100 records
- prepared for all levels to be added

--- a/levels/clubstep.html
+++ b/levels/clubstep.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#2 – Clubstep – Geometry Dash Main Level List</title>
+    <title>#3 – Clubstep – Geometry Dash Main Level List</title>
     <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/529502581a.js" crossorigin="anonymous"></script>
 </head>
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>0 records registered, out of which 0 are 100%</h6>
+                    <h6>20 records registered, out of which 20 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -85,9 +85,104 @@
                                 <th>Video Proof</th>
                             </tr>
                             <tr>
-                                <td>No records yet!</td>
-                                <td>0%</td>
-                                <td><a class="record-list-link" href="#"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                                <td>iMarcoFC</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=rWZ9PdPs1Pg" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>EliGabRet</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/_F39FSCEttA" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Kookyeyes</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=1mBHPTiR4kA" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>vapey</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=fqL8XT0Ej4k" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Marshi123</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/Ac0E43mV1f8" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>MidKnite</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/ZHMCzl_lVe4?si=FDTVH-O8xUqfEhCR" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>SirSneeze</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=eKSOsdIzoS0" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>lZafkiel</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/IpO_D5GyJ8c?si=ILRwBi0HATQhZyRY" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>EggCultist</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/FUk66z4tnCQ" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Trubactor</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/YcPdzI3KP6Y" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>NotDarthOlkku</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/3XzyE4RPfxE" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>iiZei</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=rwA9Rn3IHas" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>ShArPi3</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=V3QYSxnMKys" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Bancrease</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/zs7MXglmm8Y" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Jogurtix </td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=tkqakUh_euY" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>OverNamed</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=FX_z8VXV39w" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Akemi1045</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/gYiigAgpI0w" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>3EEV</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/yYM_BSC6Fb4" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>MITSU4661</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=F2QaADYw_jQ" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>BedlessRatGMD</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=8heCakFPpAE&t=22s" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
