--- a/levels/deadlocked.html
+++ b/levels/deadlocked.html
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>1 record registered, out of which 1 is 100%</h6>
+                    <h6>30 records registered, out of which 30 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -88,6 +88,146 @@
                                 <td>Orangefroggy</td>
                                 <td>100%</td>
                                 <td><a class="record-list-link" href="https://youtu.be/aETuqzUi2ek" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>FalseGeo</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/K-CwlBsB0e8" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>NeonBuster2009</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/BSaIB9pE56c" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>PPPixel</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=lYpT7qA4mJA" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Happy365</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=CORN69Kzv4k" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>iMarcoFC</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/jbnblc8Pp5c" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Dycibel</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=3VZlB4vRnMo" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>ian</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=BFKFSSaParw" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Avalonian</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/oVvG1dxt9zM" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>anActualFurret</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/eDrOnPKc__A" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Josradu</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=HsaJNAFqsFQ" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Steelfrog</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/n4dnaMD21Eg" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Kookyeyes</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/YJ6SY67ZczY" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>MidKnite</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/-VXljz_J0KQ?si=nJPeVrbmiXiPTjWh" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>EggCultist</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/dSjQyqZ14Q0" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>NotDarthOlkku</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/BKzdEJol0dU" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Trubactor</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/2uUd1rug31I" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>ruubyy</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/jEhGsbVo034" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>iiZei</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=GVCCHl62X2k" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Bancrease</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/1DDIi9BEbcs" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>MendAmarYT</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/nL3t6f1h1JY?si=SToQO4xVKaWuGZIF" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>kvvoya</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/B3Mmo8QP2Jo" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>sillycatgirls</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=e9Z8jD7eXf4" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Aren</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/ZSb4tNniHOU?si=FWLEVe-BAtzdX-Xn" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>tofflez</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/YTioPiyHp4A" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>zVonk</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/yr5_s5WJ5l8" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Akemi1045</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/JyGy11448HQ" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>3EEV</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/nYgvYRZhODc" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>MITSU4661</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=c9V6olB_mLE" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
