--- a/levels/dry-out.html
+++ b/levels/dry-out.html
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>0 records registered, out of which 0 are 100%</h6>
+                    <h6>1 record registered, out of which 1 is 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -85,9 +85,9 @@
                                 <th>Video Proof</th>
                             </tr>
                             <tr>
-                                <td>No records yet!</td>
-                                <td>0%</td>
-                                <td><a class="record-list-link" href="#"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                                <td>Marshi123</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/uRRgCtlYxGE" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
