--- a/levels/stereo-madness.html
+++ b/levels/stereo-madness.html
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>1 record registered, out of which 1 is 100%</h6>
+                    <h6>4 records registered, out of which 4 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -88,6 +88,21 @@
                                 <td>VarsityJacket</td>
                                 <td>100%</td>
                                 <td><a class="record-list-link" href="https://youtu.be/znDeiL6Oikg?si=irrvMl1opjG4EhNu" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Marshi123</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/Gewky9jygzA" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Cherrylul</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=GT-mFw-S9W0" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>tutuviniyt11</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/VoYdJ9MRngs" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
