--- a/levels/theorie-of-everything-2.html
+++ b/levels/theorie-of-everything-2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#3 – Theory Of Everything 2 – Geometry Dash Main Level List</title>
+    <title>#2 – Theory Of Everything 2 – Geometry Dash Main Level List</title>
     <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/529502581a.js" crossorigin="anonymous"></script>
 </head>
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>0 records registered, out of which 0 are 100%</h6>
+                    <h6>17 records registered, out of which 17 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -85,9 +85,89 @@
                                 <th>Video Proof</th>
                             </tr>
                             <tr>
-                                <td>No records yet!</td>
-                                <td>0%</td>
-                                <td><a class="record-list-link" href="#"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                                <td>zRedMun</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/losMSv_O6eU" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>iMarcoFC</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=mY-qKTozI8g" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>shyguy24</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/78PtkDXJSWY" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>ruq</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=hxHN2IR12-g" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Grimreaper08</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/lZT5vOqBgVA?si=TcgaBfhVlCuhG4sg" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Kookyeyes</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=1mBHPTiR4kA" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Egg Cultist</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/J6fNzhJuZ1U" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Trubactor</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/gXDNNx7f8kE" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>NotDarthOlkku</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/ORw-aIm03G0" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>flexio67</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/Worh993GtlU" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>iiZei</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/ndaJHAJlvo4" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>iglab</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/wTtcPGH3rl0" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Bancrease</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/KlF2Ohm1-wA" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>tofflez</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/Dayp9HcCHCg" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Akemi1045</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/QR9IwN3bL-k" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>MITSU4661</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=hXN6cOBsfBM" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>3EEV</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/aLN1iRCwJOA" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
