--- a/levels/back-on-track.html
+++ b/levels/back-on-track.html
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>0 records registered, out of which 0 are 100%</h6>
+                    <h6>4 records registered, out of which 4 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -85,9 +85,24 @@
                                 <th>Video Proof</th>
                             </tr>
                             <tr>
-                                <td>No records yet!</td>
-                                <td>0%</td>
-                                <td><a class="record-list-link" href="#"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                                <td>Rockless</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/68IydEJ565o?si=79GZy4UDmEAw4QzT" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Marshi123</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/qKQxjSjxU5Q" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Ku77</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=id6qoUFMCRw" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Danipro2007</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/NHYRfXC41-c" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
