--- a/levels/cant-let-go.html
+++ b/levels/cant-let-go.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#15 – Cant Let Go – Geometry Dash Main Level List</title>
+    <title>#14 – Cant Let Go – Geometry Dash Main Level List</title>
     <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/529502581a.js" crossorigin="anonymous"></script>
 </head>
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>0 records registered, out of which 0 are 100%</h6>
+                    <h6>2 records registered, out of which 2 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -85,9 +85,14 @@
                                 <th>Video Proof</th>
                             </tr>
                             <tr>
-                                <td>No records yet!</td>
-                                <td>0%</td>
-                                <td><a class="record-list-link" href="#"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                                <td>Marshi123</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/lYe_GnuwxHc" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>dumbstufftc</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/conFb3jwcfk?si=njpVoV1B3lkHPdw6" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
