--- a/levels/clutterfunk.html
+++ b/levels/clutterfunk.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#6 – Clubstep – Geometry Dash Main Level List</title>
+    <title>#5 – Clutterfunk – Geometry Dash Main Level List</title>
     <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/529502581a.js" crossorigin="anonymous"></script>
 </head>
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>0 records registered, out of which 0 are 100%</h6>
+                    <h6>5 records registered, out of which 5 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -85,9 +85,29 @@
                                 <th>Video Proof</th>
                             </tr>
                             <tr>
-                                <td>No records yet!</td>
-                                <td>0%</td>
-                                <td><a class="record-list-link" href="#"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                                <td>Thedude3578</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/xsd1BG-MT8o?si=T21ir3dN3XJNmhvl" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>derekowo</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=dEpxcAn1-ao" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Marshi123</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/FjgHXtpZzhU" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>tofflez</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/1ARWo26tUw4" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>MITSU4661</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=BB3CWUwxWN0" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
