--- a/levels/geometrical-dominator.html
+++ b/levels/geometrical-dominator.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>#7 – Geometrical Dominator – Geometry Dash Main Level List</title>
+    <title>#11 – Geometrical Dominator – Geometry Dash Main Level List</title>
     <link rel="stylesheet" href="../style.css">
     <script src="https://kit.fontawesome.com/529502581a.js" crossorigin="anonymous"></script>
 </head>
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>0 records registered, out of which 0 are 100%</h6>
+                    <h6>4 records registered, out of which 4 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -85,9 +85,24 @@
                                 <th>Video Proof</th>
                             </tr>
                             <tr>
-                                <td>No records yet!</td>
-                                <td>0%</td>
-                                <td><a class="record-list-link" href="#"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                                <td>Lorum</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/4Ej5k0Pu1MQ" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>Anekosan</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/fXRIRn5zpuA" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>tofflez</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/Yib1xUnpyx0" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>MITSU4661</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://www.youtube.com/watch?v=Ttda6hhUN7Y" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
