--- a/levels/the-challenge.html
+++ b/levels/the-challenge.html
@@ -50,7 +50,7 @@
                     <div class="info-section">
                         
                         <h4>Level ID:</h4>
-                        <p>N/A</p>
+                        <p>3001</p>
                     </div>
                     <div class="info-section">
                         <h4>Level length:</h4>
@@ -62,7 +62,7 @@
                     </div>
                     <div class="info-section">
                         <h4>In-Game Difficulty:</h4>
-                        <p>N/A</p>
+                        <p>Hard</p>
                     </div>
                     <div class="info-section">
                         <h4>Created in:</h4>
@@ -74,7 +74,7 @@
                 <div class="record-info">
                     <h2>Records</h2>
                     <h4>100% required to qualify</h4>
-                    <h6>0 records registered, out of which 0 are 100%</h6>
+                    <h6>4 records registered, out of which 4 are 100%</h6>
                 </div>
                 <div class="record-list">
                     <div class="record-list">
@@ -85,9 +85,24 @@
                                 <th>Video Proof</th>
                             </tr>
                             <tr>
-                                <td>No records yet!</td>
-                                <td>0%</td>
-                                <td><a class="record-list-link" href="#"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                                <td>Mellon</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/gnepLDSIYlc" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>miamakura</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/4Qc-3atGkso" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>JJReed</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/VfVd48N2nm4" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
+                            </tr>
+                            <tr>
+                                <td>CoasterGD</td>
+                                <td>100%</td>
+                                <td><a class="record-list-link" href="https://youtu.be/vVL6khqhyyw" target="_blank"><i class="fa-solid fa-arrow-up-right-from-square" style="color: #0000ff;"></i> YouTube</a></td>
                             </tr>
                             <!-- Add more rows here -->
                         </table>
