--- a/levels/back-on-track.html
+++ b/levels/back-on-track.html
@@ -18,7 +18,7 @@
         <div class="navbar-links">
             <ul>
                 <li><a href="../index.html">List</a></li>
-                <li><a href="https://forms.gle/52b5q5U8XtFP8bfi6" target="_blank">Record Submitter</a></li>
+                <li><a href="https://docs.google.com/forms/d/e/1FAIpQLSfyn2F-Cy2plzile1S5Z7VjSutkmZSSH7aFShsEXXyYM5E5vw/viewform" target="_blank">Record Submitter</a></li>
                 <li><a href="../about.html">About</a></li>
             </ul>
         </div>
